--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^6.16.0",
     "use-konami": "^1.0.1"
   },
@@ -209,7 +210,6 @@
         }
       ]
     },
-
     "linux": {
       "target": [
         "AppImage"
