--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,12 @@
 {
   "name": "GoalsTV",
-  "version": "2.0.0",
-  "description": "A foundation for scalable desktop apps",
+  "version": "2.0.1",
+  "description": "Goals TV App",
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "Parachute",
+    "email": "development@parachute.net",
+    "url": "https://www.parachute.net/"
   },
   "main": "./dist/main/main.js",
   "scripts": {
