--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@splidejs/splide-extension-video": "^0.8.0",
     "bad-words": "^4.0.0",
     "bootstrap": "^5.3.3",
+    "date-fns-tz": "^3.1.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-store": "^8.2.0",
