--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@electron/notarize": "^2.3.2",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide-extension-video": "^0.8.0",
+    "auto-launch": "^5.0.6",
     "bad-words": "^4.0.0",
     "bootstrap": "^5.3.3",
     "date-fns-tz": "^3.1.3",
@@ -99,6 +100,7 @@
     "electron-log": "^4.4.8",
     "electron-store": "^8.2.0",
     "electron-updater": "^6.1.4",
+    "package": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
